fix: hide scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,16 @@ body {
   }
 }
 
+/* Custom styles for hiding scrollbars */
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hidden {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 strong {
   @apply text-tomato;
   @apply font-bold;
